<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="app_name">睿易派</string>
    <string name="action_settings">设置</string>
    <string name="action_popup">弹出设置</string>
    <string name="intro_text">Touch to focus, and press the blue camera button to take photos. For more help, click Online help from Settings. Open Camera is completely free. If you like this app, please consider buying my donate app :) (see link in Settings, or Online help).\n\nPrivacy Policy: Location permission is required for geotagging, but this is disabled by default. If enabled, your location is encoded in the saved files (and it is only used for this purpose).\n\n(This message won\'t show again.)</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="answer_yes">是</string>
    <string name="answer_no">否</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="choose_save_location">选择保存位置:</string>
    <string name="clear_folder_history">清除文件夹历史记录</string>
    <string name="clear_folder_history_question">是否清除文件夹历史记录？</string>
    <string name="choose_another_folder">选择另外的文件夹</string>
    <string name="changed_save_location">将保存位置设置为：</string>
    <string name="stopped_recording_video">已停止录像</string>
    <string name="repeats_to_go">还需要重复次数</string>
    <string name="failed_to_reconnect_camera">无法重新连接到照相机</string>
    <string name="video_may_be_corrupted">错误，视频文件可能已被损坏</string>
    <string name="not_supported">不被您的设备所支持</string>
    <string name="video_error_unknown">未知错误，视频挂起</string>
    <string name="video_error_server_died">服务器死机，视频挂起</string>
    <string name="video_max_duration">视频已达到最大记录时间</string>
    <string name="video_max_filesize">视频已达到最大文件大小</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="front_camera">前置摄像头</string>
    <string name="back_camera">后摄像头</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="exposure_locked">曝光已锁定</string>
    <string name="exposure_unlocked">曝光已解锁</string>
    <string name="cancelled_timer">定时器已取消</string>
    <string name="cancelled_burst_mode">连拍模式已取消</string>
    <string name="started_timer">已开始计时</string>
    <string name="failed_to_save_video">无法保存视频文件</string>
    <string name="failed_to_record_video">无法开始录像</string>
    <string name="started_recording_video">已开始录像</string>
    <string name="sorry">很抱歉</string>
    <string name="failed_to_save_image">无法保存图像文件</string>
    <string name="failed_to_save_photo">无法保存照片</string>
    <string name="preference_category_camera_effects">相机效果</string>
    <string name="preference_lock_orientation">锁定拍照/录像方向</string>
    <string name="preference_lock_orientation_summary">如果设置了，设备的当前方向将被忽略，拍照和录像的方向将使用设置值。</string>
    <string name="preference_face_detection">人脸识别</string>
    <string name="preference_face_detection_summary">使用人脸识别而不是对焦区域</string>
    <string name="preference_category_camera_controls">相机控制</string>
    <string name="preference_timer">定时器</string>
    <string name="preference_timer_summary">给相机设置定时器</string>
    <string name="preference_timer_beep">定时器声音</string>
    <string name="preference_timer_beep_summary">在定时器计时时或连拍等待时发出声音</string>
    <string name="preference_burst_mode">连拍模式</string>
    <string name="preference_burst_mode_summary">连续拍摄多个照片</string>
    <string name="preference_burst_interval">连拍间隔</string>
    <string name="preference_burst_interval_summary">在连拍的每张照片间等待的时间</string>
    <string name="preference_screen_camera_controls_more">更多相机控制...</string>
    <string name="preference_pause_preview">拍照后暂停</string>
    <string name="preference_pause_preview_summary">拍照后暂停预览，可以选择分享或删除当前拍摄的照片</string>
    <string name="preference_shutter_sound">快门声音</string>
    <string name="preference_shutter_sound_summary">拍照后播放快门声音(需要Android 4.2或更高版本才能禁用)</string>
    <string name="preference_volume_keys">音量键</string>
    <string name="preference_volume_keys_summary">设置音量键的动作</string>
    <string name="preference_save_photo_prefix">照片文件名前缀</string>
    <string name="preference_save_photo_prefix_summary">设置照片文件名的前缀</string>
    <string name="preference_save_video_prefix">视频文件名前缀</string>
    <string name="preference_save_video_prefix_summary">设置视频文件名的前缀</string>
    <string name="preference_show_when_locked">锁定屏幕上显示照相机</string>
    <string name="preference_show_when_locked_summary">如果打开，相机程序将在锁定屏幕上显示。</string>
    <string name="preference_lock_video">录像时锁定屏幕</string>
    <string name="preference_lock_video_summary">录像时，屏幕上的控制按钮将被锁定以避免误触动，您需要通过滑动来解锁。注意当程序进入后台运行或屏幕被关闭时录像将停止。</string>
    <string name="preference_rotate_preview">旋转预览界面</string>
    <string name="preference_rotate_preview_summary">调整预览画面的旋转方向，不会影响到拍摄的照片或录像。</string>
    <string name="preference_screen_gui">屏幕控制界面…</string>
    <string name="preference_preview_size">预览大小</string>
    <string name="preference_preview_size_summary">选择预览的尺寸</string>
    <string name="preference_ui_placement">控制按钮放置位置</string>
    <string name="preference_ui_placement_summary">选择左手习惯或者右手习惯</string>
    <string name="preference_immersive_mode">Immersive mode</string>
    <string name="preference_immersive_mode_summary">Options for \"immersive mode\" behaviour</string>
    <string name="preference_show_zoom">缩放控制</string>
    <string name="preference_show_zoom_summary">显示相机当前的缩放级别</string>
    <string name="preference_show_zoom_controls">显示缩放 -/+ 控制</string>
    <string name="preference_show_zoom_controls_summary">显示控制缩放用的 -/+ 按钮</string>
    <string name="preference_show_zoom_slider_controls">缩放滑杆</string>
    <string name="preference_show_zoom_slider_controls_summary">显示缩放控制用的滑杆</string>
    <string name="preference_free_memory">显示剩余存储空间</string>
    <string name="preference_free_memory_summary">在屏幕上显示设备上当前的空余存储空间</string>
    <string name="preference_show_angle">显示角度</string>
    <string name="preference_show_angle_summary">在屏幕上显示当前设备的旋转方向</string>
    <string name="preference_show_angle_line">显示水平线</string>
    <string name="preference_show_angle_line_summary">在屏幕上显示水平线</string>
    <string name="preference_show_geo_direction">显示指南针方向</string>
    <string name="preference_show_geo_direction_summary">在屏幕上显示当前指南针的方向</string>
    <string name="preference_show_time">显示时间</string>
    <string name="preference_show_time_summary">在屏幕上显示当前时间</string>
    <string name="preference_show_battery">显示电池电量</string>
    <string name="preference_show_battery_summary">在屏幕上显示当前电池电量</string>
    <string name="preference_grid">显示网格</string>
    <string name="preference_grid_summary">在屏幕上显示某一种网格</string>
    <string name="preference_crop_guide">显示切割范围</string>
    <string name="preference_crop_guide_summary">针对所选的宽高比显示一个裁剪预览的矩形框</string>
    <string name="preference_thumbnail_animation">显示缩略图动画</string>
    <string name="preference_thumbnail_animation_summary">拍照后显示缩略图动画</string>
    <string name="preference_keep_display_on">保持屏幕常亮</string>
    <string name="preference_keep_display_on_summary">如果打开，在拍照界面屏幕不会自动关闭</string>
    <string name="preference_max_brightness">强制最大亮度</string>
    <string name="preference_max_brightness_summary">强制屏幕使用最大亮度，而不是设备默认亮度</string>
    <string name="preference_category_camera_quality">照片和录像设置</string>
    <string name="preference_screen_photo_settings">照片设置…</string>
    <string name="preference_screen_video_settings">录像设置…</string>
    <string name="preference_screen_location_settings">保存位置设置…</string>
    <string name="preference_resolution">相机分辨率</string>
    <string name="preference_resolution_summary">设置拍照时所使用的分辨率</string>
    <string name="preference_quality">相片质量</string>
    <string name="preference_quality_summary">设置照片存储时的质量(推荐使用90%%的质量)</string>
    <string name="preference_location">保存位置信息</string>
    <string name="preference_location_summary">拍照或录像时保存GPS的位置信息</string>
    <string name="preference_gps_direction">保存指南针方向</string>
    <string name="preference_gps_direction_summary">在照片中保存GPS的指南针方向</string>
    <string name="preference_require_location">需要位置数据</string>
    <string name="preference_require_location_summary">如果位置服务可用，仅在位置数据可用的时候才进行拍照或录像</string>
    <string name="video_quality">视频分辨率</string>
    <string name="video_quality_summary">调整视频拍摄时所使用的分辨率</string>
    <string name="preference_force_video_4k">强制使用4K UHD 的视频 (实验阶段)</string>
    <string name="preference_force_video_4k_summary">在后置摄像头上使用 3840x2160 分辨率来拍摄，只有当您的设备支持时，如果不支持可能引起程序崩溃</string>
    <string name="preference_video_stabilization">启用视频稳定器</string>
    <string name="preference_video_stabilization_summary">视频稳定器可以在拍摄或预览时降低相机抖动所造成的影响</string>
    <string name="preference_video_bitrate">视频码率 (预计值)</string>
    <string name="preference_video_bitrate_summary">设置视频文件的码率(越高的码率意味着更好的质量，但将占用更多的存储空间，如果不被设备支持将导致录像失败)</string>
    <string name="preference_video_fps">视频帧数 (预计值)</string>
    <string name="preference_video_fps_summary">设置视频录制时所使用的帧数(FPS)，(接近值，可能无法达到，如果设备不支持将造成录像失败)</string>
    <string name="preference_video_max_duration">录像最大时长</string>
    <string name="preference_video_max_duration_summary">经过设置的时间后，录像将自动停止</string>
    <string name="preference_video_restart">最大时长后重新开始录像</string>
    <string name="preference_video_restart_summary">如果录像达到最大时长停止后，这个选项可以设置重新开始录像的次数</string>
    <string name="preference_record_audio">音频录制</string>
    <string name="preference_record_audio_summary">录像时同时录音</string>
    <string name="preference_record_audio_src">音频源</string>
    <string name="preference_record_audio_src_summary">设置录音时所使用的麦克风</string>
    <string name="preference_video_flash">录像时闪光灯闪烁</string>
    <string name="preference_video_flash_summary">如果打开，闪光灯将在录像时闪烁(这可以在远距离看出是否正在录像)</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">相册</string>
    <string name="exposure">曝光</string>
    <string name="exposure_lock">曝光锁</string>
    <string name="switch_camera">切换到拍照</string>
    <string name="switch_video">切换到录像</string>
    <string name="trash">删除最后所拍摄的照片</string>
    <string name="share">分享照片</string>
    <string name="fx_string_cancel">取消</string>
    <string name="fx_string_note">批注</string>
    <string name="fx_string_ok">确定</string>
    <string name="window_icon">Window icon</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="corner">Corner</string>
    <string name="maximize">Maximize</string>
</resources>