<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:app1="http://schemas.android.com/apk/res/com.netspace.teacherpad">
    <PreferenceCategory android:title="@string/preference_category_camera_effects" android:key="preference_category_camera_effects">
        <ListPreference android:entries="@array/preference_lock_orientation_entries" android:title="@string/preference_lock_orientation" android:key="preference_lock_orientation" android:summary="@string/preference_lock_orientation_summary" android:defaultValue="none" android:entryValues="@array/preference_lock_orientation_values" />
        <CheckBoxPreference android:title="@string/preference_face_detection" android:key="preference_face_detection" android:summary="@string/preference_face_detection_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_camera_controls" android:key="preference_category_camera_controls">
        <ListPreference android:entries="@array/preference_timer_entries" android:title="@string/preference_timer" android:key="preference_timer" android:summary="@string/preference_timer_summary" android:defaultValue="0" android:entryValues="@array/preference_timer_values" />
        <CheckBoxPreference android:title="@string/preference_timer_beep" android:key="preference_timer_beep" android:summary="@string/preference_timer_beep_summary" android:defaultValue="true" />
        <ListPreference android:entries="@array/preference_burst_mode_entries" android:title="@string/preference_burst_mode" android:key="preference_burst_mode" android:summary="@string/preference_burst_mode_summary" android:defaultValue="1" android:entryValues="@array/preference_burst_mode_values" />
        <ListPreference android:entries="@array/preference_burst_interval_entries" android:title="@string/preference_burst_interval" android:key="preference_burst_interval" android:summary="@string/preference_burst_interval_summary" android:defaultValue="0" android:entryValues="@array/preference_burst_interval_values" />
        <PreferenceScreen android:persistent="false" android:title="@string/preference_screen_camera_controls_more" android:key="preference_screen_camera_controls_more">
            <CheckBoxPreference android:title="@string/preference_pause_preview" android:key="preference_pause_preview" android:summary="@string/preference_pause_preview_summary" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/preference_shutter_sound" android:key="preference_shutter_sound" android:summary="@string/preference_shutter_sound_summary" android:defaultValue="true" />
            <ListPreference android:entries="@array/preference_volume_keys_entries" android:title="@string/preference_volume_keys" android:key="preference_volume_keys" android:summary="@string/preference_volume_keys_summary" android:defaultValue="volume_take_photo" android:entryValues="@array/preference_volume_keys_values" />
            <EditTextPreference android:title="@string/preference_save_photo_prefix" android:key="preference_save_photo_prefix" android:summary="@string/preference_save_photo_prefix_summary" android:defaultValue="IMG_" android:dialogTitle="@string/preference_save_photo_prefix" android:dialogMessage="@string/preference_save_photo_prefix_summary" android:inputType="text" />
            <EditTextPreference android:title="@string/preference_save_video_prefix" android:key="preference_save_video_prefix" android:summary="@string/preference_save_video_prefix_summary" android:defaultValue="VID_" android:dialogTitle="@string/preference_save_video_prefix" android:dialogMessage="@string/preference_save_video_prefix_summary" android:inputType="text" />
            <CheckBoxPreference android:title="@string/preference_show_when_locked" android:key="preference_show_when_locked" android:summary="@string/preference_show_when_locked_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_lock_video" android:key="preference_lock_video" android:summary="@string/preference_lock_video_summary" android:defaultValue="false" />
            <ListPreference android:entries="@array/preference_rotate_preview_entries" android:title="@string/preference_rotate_preview" android:key="preference_rotate_preview" android:summary="@string/preference_rotate_preview_summary" android:defaultValue="0" android:entryValues="@array/preference_rotate_preview_values" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/preference_screen_gui" android:key="preference_screen_gui">
            <ListPreference android:entries="@array/preference_preview_size_entries" android:title="@string/preference_preview_size" android:key="preference_preview_size" android:summary="@string/preference_preview_size_summary" android:defaultValue="preference_preview_size_wysiwyg" android:entryValues="@array/preference_preview_size_values" />
            <ListPreference android:entries="@array/preference_ui_placement_entries" android:title="@string/preference_ui_placement" android:key="preference_ui_placement" android:summary="@string/preference_ui_placement_summary" android:defaultValue="ui_right" android:entryValues="@array/preference_ui_placement_values" />
            <ListPreference android:entries="@array/preference_immersive_mode_entries" android:title="@string/preference_immersive_mode" android:key="preference_immersive_mode" android:summary="@string/preference_immersive_mode_summary" android:defaultValue="immersive_mode_low_profile" android:entryValues="@array/preference_immersive_mode_values" />
            <CheckBoxPreference android:title="@string/preference_show_zoom" android:key="preference_show_zoom" android:summary="@string/preference_show_zoom_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_show_zoom_controls" android:key="preference_show_zoom_controls" android:summary="@string/preference_show_zoom_controls_summary" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/preference_show_zoom_slider_controls" android:key="preference_show_zoom_slider_controls" android:summary="@string/preference_show_zoom_slider_controls_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_free_memory" android:key="preference_free_memory" android:summary="@string/preference_free_memory_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_show_angle" android:key="preference_show_angle" android:summary="@string/preference_show_angle_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_show_angle_line" android:key="preference_show_angle_line" android:summary="@string/preference_show_angle_line_summary" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/preference_show_geo_direction" android:key="preference_show_geo_direction" android:summary="@string/preference_show_geo_direction_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_show_time" android:key="preference_show_time" android:summary="@string/preference_show_time_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_show_battery" android:key="preference_show_battery" android:summary="@string/preference_show_battery_summary" android:defaultValue="true" />
            <ListPreference android:entries="@array/preference_grid_entries" android:title="@string/preference_grid" android:key="preference_grid" android:summary="@string/preference_grid_summary" android:defaultValue="preference_grid_none" android:entryValues="@array/preference_grid_values" />
            <ListPreference android:entries="@array/preference_crop_guide_entries" android:title="@string/preference_crop_guide" android:key="preference_crop_guide" android:summary="@string/preference_crop_guide_summary" android:defaultValue="crop_guide_none" android:entryValues="@array/preference_crop_guide_values" />
            <CheckBoxPreference android:title="@string/preference_thumbnail_animation" android:key="preference_thumbnail_animation" android:summary="@string/preference_thumbnail_animation_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_keep_display_on" android:key="preference_keep_display_on" android:summary="@string/preference_keep_display_on_summary" android:defaultValue="true" />
            <CheckBoxPreference android:title="@string/preference_max_brightness" android:key="preference_max_brightness" android:summary="@string/preference_max_brightness_summary" android:defaultValue="true" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_camera_quality" android:key="preference_category_camera_quality">
        <PreferenceScreen android:persistent="false" android:title="@string/preference_screen_photo_settings" android:key="preference_screen_photo_settings">
            <ListPreference android:title="@string/preference_resolution" android:key="preference_resolution" android:summary="@string/preference_resolution_summary" />
            <ListPreference android:title="@string/preference_quality" android:key="preference_quality" android:summary="@string/preference_quality_summary" android:defaultValue="90" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/preference_screen_video_settings" android:key="preference_screen_video_settings">
            <ListPreference android:title="@string/video_quality" android:key="preference_video_quality" android:summary="@string/video_quality_summary" />
            <CheckBoxPreference android:title="@string/preference_force_video_4k" android:key="preference_force_video_4k" android:summary="@string/preference_force_video_4k_summary" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/preference_video_stabilization" android:key="preference_video_stabilization" android:summary="@string/preference_video_stabilization_summary" android:defaultValue="false" />
            <ListPreference android:entries="@array/preference_video_bitrate_entries" android:title="@string/preference_video_bitrate" android:key="preference_video_bitrate" android:summary="@string/preference_video_bitrate_summary" android:defaultValue="default" android:entryValues="@array/preference_video_bitrate_values" />
            <ListPreference android:entries="@array/preference_video_fps_entries" android:title="@string/preference_video_fps" android:key="preference_video_fps" android:summary="@string/preference_video_fps_summary" android:defaultValue="default" android:entryValues="@array/preference_video_fps_values" />
            <ListPreference android:entries="@array/preference_video_max_duration_entries" android:title="@string/preference_video_max_duration" android:key="preference_video_max_duration" android:summary="@string/preference_video_max_duration_summary" android:defaultValue="0" android:entryValues="@array/preference_video_max_duration_values" />
            <ListPreference android:entries="@array/preference_video_restart_entries" android:title="@string/preference_video_restart" android:key="preference_video_restart" android:summary="@string/preference_video_restart_summary" android:defaultValue="0" android:entryValues="@array/preference_video_restart_values" />
            <CheckBoxPreference android:title="@string/preference_record_audio" android:key="preference_record_audio" android:summary="@string/preference_record_audio_summary" android:defaultValue="true" />
            <ListPreference android:entries="@array/preference_record_audio_src_entries" android:title="@string/preference_record_audio_src" android:key="preference_record_audio_src" android:summary="@string/preference_record_audio_src_summary" android:defaultValue="audio_src_camcorder" android:entryValues="@array/preference_record_audio_src_values" />
            <CheckBoxPreference android:title="@string/preference_video_flash" android:key="preference_video_flash" android:summary="@string/preference_video_flash_summary" android:defaultValue="false" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/preference_screen_location_settings" android:key="preference_screen_location_settings">
            <CheckBoxPreference android:title="@string/preference_location" android:key="preference_location" android:summary="@string/preference_location_summary" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/preference_gps_direction" android:key="preference_gps_direction" android:summary="@string/preference_gps_direction_summary" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/preference_require_location" android:key="preference_require_location" android:summary="@string/preference_require_location_summary" android:defaultValue="false" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
