<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:app1="http://schemas.android.com/apk/res/com.netspace.teacherpad" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    <ImageButton android:id="@+id/take_photo" android:background="@null" android:padding="10dp" android:layout_width="100dp" android:layout_height="100dp" android:src="@drawable/take_photo_selector" android:scaleType="fitCenter" android:layout_centerVertical="true" android:onClick="clickedTakePhoto" android:contentDescription="@string/take_photo" />
    <ZoomControls android:id="@+id/zoom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:alpha="0.5" />
    <SeekBar android:id="@+id/zoom_seekbar" android:layout_width="150dp" android:layout_height="50dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" />
    <Button android:id="@+id/gui_anchor" android:padding="1dp" android:layout_width="0dp" android:layout_height="0dp" android:scaleType="fitCenter" />
    <ImageButton android:id="@+id/settings" android:padding="10dp" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/settings" android:scaleType="fitCenter" android:onClick="clickedSettings" android:contentDescription="@string/action_settings" />
    <ImageButton android:id="@+id/gallery" android:padding="10dp" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/gallery" android:scaleType="fitCenter" android:onClick="clickedGallery" android:contentDescription="@string/gallery" />
    <ImageButton android:id="@+id/popup" android:padding="10dp" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/popup" android:scaleType="fitCenter" android:onClick="clickedPopupSettings" android:contentDescription="@string/action_popup" />
    <ImageButton android:id="@+id/exposure_lock" android:padding="10dp" android:layout_width="50dp" android:layout_height="50dp" android:scaleType="fitCenter" android:onClick="clickedExposureLock" android:contentDescription="@string/exposure_lock" />
    <ImageButton android:id="@+id/exposure" android:padding="10dp" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/exposure" android:scaleType="fitCenter" android:onClick="clickedExposure" android:contentDescription="@string/exposure" />
    <ImageButton android:id="@+id/switch_video" android:padding="10dp" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/switch_video" android:scaleType="fitCenter" android:onClick="clickedSwitchVideo" android:contentDescription="@string/switch_video" />
    <ImageButton android:id="@+id/switch_camera" android:padding="10dp" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/switch_camera" android:scaleType="fitCenter" android:onClick="clickedSwitchCamera" android:contentDescription="@string/switch_camera" />
    <ImageButton android:id="@+id/trash" android:padding="10dp" android:visibility="gone" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/trash" android:scaleType="fitCenter" android:onClick="clickedTrash" android:contentDescription="@string/trash" />
    <ImageButton android:id="@+id/share" android:padding="10dp" android:visibility="gone" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/share" android:scaleType="fitCenter" android:onClick="clickedShare" android:contentDescription="@string/share" />
    <SeekBar android:id="@+id/seekbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <ZoomControls android:id="@+id/seekbar_zoom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <FrameLayout android:id="@+id/prefs_container" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerInParent="true" />
    <FrameLayout android:id="@+id/locker" android:layout_width="match_parent" android:layout_height="match_parent" />
    <ScrollView android:id="@+id/popup_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/settings" android:layout_below="@+id/settings" />
    <ScrollView android:id="@+id/hide_container" android:layout_width="match_parent" android:layout_height="match_parent" />
</RelativeLayout>
