<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:app1="http://schemas.android.com/apk/res/com.netspace.teacherpad" android:id="@+id/content" android:background="@drawable/border" android:layout_width="200dp" android:layout_height="200dp">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/titlebar" android:background="#80000000" android:padding="4dp" android:layout_width="match_parent" android:layout_height="30dp" android:layout_alignParentTop="true">
        <ImageView android:id="@+id/window_icon" android:visibility="gone" android:layout_width="24dp" android:layout_height="24dp" android:contentDescription="@string/window_icon" />
        <TextView android:textSize="16sp" android:textColor="#b3b3b3" android:id="@+id/title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginBottom="2dp" android:text="Title" android:maxLines="1" android:layout_weight="1.0" />
        <ImageView android:id="@+id/hide" android:background="@drawable/hide" android:layout_width="24dp" android:layout_height="24dp" android:contentDescription="@string/hide" />
        <ImageView android:id="@+id/maximize" android:background="@drawable/ic_maxmize" android:layout_width="24dp" android:layout_height="24dp" android:contentDescription="@string/maximize" />
        <ImageView android:id="@+id/close" android:background="@drawable/ic_close2" android:layout_width="24dp" android:layout_height="24dp" android:contentDescription="@string/close" />
    </LinearLayout>
    <FrameLayout android:id="@+id/body" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/titlebar" />
    <ImageView android:id="@+id/corner" android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/corner" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/corner" />
</RelativeLayout>
