<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:app1="http://schemas.android.com/apk/res/com.netspace.teacherpad" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18sp" android:typeface="normal" android:textColor="@color/ux_text_color_title_dark" android:gravity="center" android:id="@+id/rd_note_dialog_edit_title" android:layout_width="match_parent" android:layout_height="@dimen/ux_toolbar_height_phone" android:text="@string/fx_string_note" android:layout_alignParentLeft="true" />
        <EditText android:textSize="15sp" android:typeface="normal" android:textColor="@color/ux_color_dark" android:gravity="top|left|center_vertical|center_horizontal|center" android:id="@+id/rd_note_dialog_edit" android:background="@color/ux_color_yellow" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minLines="5" android:layout_below="@+id/rd_note_dialog_edit_title" android:layout_alignParentLeft="true" android:inputType="textMultiLine" />
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/rd_note_dialog_edit_title">
            <ImageView android:layout_width="match_parent" android:layout_height="@dimen/ux_toolbar_solidLine_height" android:src="@color/ux_color_shadow_solid_line" />
            <ImageView android:layout_width="match_parent" android:layout_height="@dimen/ux_shadow_height" android:src="@drawable/rd_search_shadow_bg90" />
        </LinearLayout>
    </RelativeLayout>
    <ImageView android:layout_width="match_parent" android:layout_height="1px" android:src="@color/ux_color_dialog_cutting_line" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/ux_text_height_button" android:textColor="@color/ux_text_color_button_dark" android:id="@+id/rd_note_dialog_edit_cancel" android:background="@drawable/dialog_left_button_background_selector" android:layout_width="0dp" android:layout_height="@dimen/ux_dialog_button_height" android:text="@string/fx_string_cancel" android:layout_weight="1.0" />
        <ImageView android:layout_width="1px" android:layout_height="@dimen/ux_dialog_button_height" android:src="@color/ux_color_dialog_cutting_line" />
        <Button android:textSize="@dimen/ux_text_height_button" android:textColor="@color/ux_text_color_button_dark" android:id="@+id/rd_note_dialog_edit_ok" android:background="@drawable/dialog_right_button_background_selector" android:layout_width="0dp" android:layout_height="@dimen/ux_dialog_button_height" android:text="@string/fx_string_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
